Updated code
Signed-off-by: Aiham <aiham.hasan@mindtree.com>